# iMessage-undeleter-rust

./: .gitignore  Cargo.toml  README.md
imessage-database/src/tables/: attachment.rs
imessage-database/src/tables/messages/: message.rs  query_parts.rs
imessage-database/src/tables/messages/tests/: query_tests.rs
imessage-database/src/util/: query_context.rs
imessage-undeleter/src/: main.rs
imessage-undeleter/src/app/: mod.rs  options.rs  runtime.rs
imessage-undeleter/src/app/compatibility/: attachment_manager.rs
imessage-undeleter/src/exporters/: exporter.rs  txt.rs
src/: main.rs
